[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay-rag"
version = "0.1.0"
description = "Reasoning-trace memory for o1/R1-style agents — store, retrieve, and splice past reasoning to cut tokens on repeated problem patterns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Asmit Dash" }]
keywords = ["llm", "reasoning", "rag", "o1", "r1", "deepseek", "claude", "extended-thinking", "memory", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "chromadb>=0.4.24",
    "pydantic>=2.6",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.7"]
bedrock = ["boto3>=1.34", "anthropic[bedrock]>=0.40"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]
all = ["sentence-transformers>=2.7", "boto3>=1.34", "anthropic[bedrock]>=0.40", "pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://github.com/asmitdash/replay-rag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
